# bumperbot

./: .clang-tidy  .pre-commit-config.yaml  README.md
.github/workflows/: bumperbot_build.yml  lint_and_format.yml
bumperbot_controller/: CMakeLists.txt  package.xml
bumperbot_controller/bumperbot_controller/: simple_controller.py
bumperbot_controller/config/: bumperbot_controllers.yaml  joy_config.yaml  joy_teleop.yaml
bumperbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
bumperbot_controller/src/: simple_controller.cpp
bumperbot_cpp_examples/: CMakeLists.txt  package.xml
bumperbot_cpp_examples/src/: simple_parameter.cpp  simple_publisher.cpp  simple_service_server.cpp  simple_subscriber.cpp  simple_tf_kinematics.cpp  simple_turtlesim_kinematics.cpp
bumperbot_description/launch/: display.launch.py
bumperbot_description/rviz/: display.rviz
bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
bumperbot_msgs/: CMakeLists.txt  package.xml
bumperbot_py_examples/: package.xml  setup.py
bumperbot_py_examples/bumperbot_py_examples/: simple_publisher.py  simple_service_client.py  simple_service_server.py  simple_subscriber.py  simple_tf_kinematics.py  simple_turtlesim_kinematics.py
src/: .CMakeLists.txt  .clang-format
src/bumperbot_utils/: CMakeLists.txt  package.xml
src/bumperbot_utils/include/bumperbot_utils/: trajectory_publisher.hpp
src/bumperbot_utils/launch/: trajectory_publisher.launch.py
src/bumperbot_utils/src/: trajectory_publisher.cpp
(+56 files in other folders)
